--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.7",
     "@mui/x-date-pickers": "^6.19.4",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
