--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,12 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.3.0",
     "mongoose": "^8.1.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "chai": "^5.1.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
