--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^9.1.6",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "node-mocks-http": "^1.14.1"
   },
   "devDependencies": {
     "jest": "^29.7.0"
