--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "node-mocks-http": "^1.14.1",
     "supertest": "^6.3.4"
   },
   "devDependencies": {
