--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "chai": "^5.1.0",
     "jest": "^29.7.0",
+    "node-mocks-http": "^1.10.0",
     "supertest": "^6.3.4"
   }
 }
