--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.8",
-    "@mui/material": "^5.15.7",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
     "@react-pdf/renderer": "^3.3.8",
     "axios": "^1.6.7",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0"
