--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1569.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
@@ -20,7 +21,7 @@
     "node-mocks-http": "^1.14.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "chai": "^5.1.0"
+    "chai": "^5.1.0",
+    "jest": "^29.7.0"
   }
 }
