--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^9.1.6",
     "mongoose": "^8.1.3",
+    "multer": "^1.4.5-lts.1",
     "node-mocks-http": "^1.14.1"
   },
   "devDependencies": {
