--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "mongodb-memory-server": "^9.1.6",
     "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1",
-    "node-mocks-http": "^1.14.1"
+    "node-mocks-http": "^1.14.1",
+    "supertest": "^6.3.4"
   },
   "devDependencies": {
     "chai": "^5.1.0",
