--- a/client/package.json
+++ b/client/package.json
@@ -13,19 +13,23 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.11",
+    "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.11",
+    "@mui/x-date-pickers": "^6.19.4",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^3.3.8",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
-    "pdfjs-dist": "^3.4.120",
-    "@mui/lab": "^5.0.0-alpha.165",
-    "@mui/x-date-pickers": "^6.19.4",
     "dayjs": "^1.11.10",
+    "pdfjs-dist": "^3.4.120",
+    "quill": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-pdf": "^7.7.1",
+    "react-router-dom": "^6.22.0",
+    "socket.io-client": "^4.7.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
