--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "devStart": "nodemon app.js",
     "test": "jest",
     "start": "node app.js"
   },
@@ -20,10 +21,12 @@
     "mongodb-memory-server": "^9.1.6",
     "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1",
-    "node-mocks-http": "^1.14.1"
+    "node-mocks-http": "^1.14.1",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "chai": "^5.1.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0"
   }
 }
